Added Helpdesk Alpha Code
git-svn-id: https://plugins.svn.wordpress.org/swiftcloud/trunk@1210630 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,6 +1,22 @@
 .tabwrapper .panel{
 	display:none;
-} 
+}
 .tabwrapper .panel.active{
 	display:block;
+}
+.button-orange{
+    background-color: #FF5319;
+    color: #ffffff;
+    border: 1px solid #FF5319;
+    width: auto;
+    text-align: center;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 5px 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+.button-orange:hover{
+    background-color: #E54510;
 }
